--- a/style.css
+++ b/style.css
@@ -4,3 +4,10 @@ body{
     margin: 0;
     padding: 0;
 }
+
+h1{
+    text-align: center;
+    color: white;
+    text-align: center;
+    margin-top: 50px;
+}
