--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: blue;
+    background-color: blueviolet;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
@@ -7,7 +7,7 @@ body{
 
 h1{
     text-align: center;
-    color: white;
+    color: yellowgreen;
     text-align: center;
     margin-top: 50px;
 }
