--- a/style.css
+++ b/style.css
@@ -11,3 +11,10 @@ h1{
     text-align: center;
     margin-top: 50px;
 }
+
+p{
+    text-align: center;
+    color: black;
+    font-size: 20px;
+    margin-top: 20px;
+}
