update the folder style.css

--- a/style.css
+++ b/style.css
@@ -7,7 +7,13 @@ body{
 
 h1{
     text-align: center;
-    color: yellowgreen;
+    color: thistle;
+    text-align: center;
+    margin-top: 50px;
+}
+h3{
+    text-align: center;
+    color: aliceblue;
     text-align: center;
     margin-top: 50px;
 }
